# ai-keto-meal-plan-generator

./: .gitignore  CLAUDE.md  Custom Keto Diet Meal Plan change final.docx  DEPLOYMENT.md  IMPLEMENTATION-GUIDE.md  TESTING_CHECKLIST.md  render.yaml
backend/: .env.example  .env.production  Dockerfile  T010_COMPLETION_SUMMARY.md  alembic.ini  main.py  pyproject.toml  requirements-prod.txt  requirements.txt  test_api_setup.py  test_phase1.py  test_quiz_response_model.py  test_redis.py  validate_phase1.py  verify_schema.py
backend/database/: T003_COMPLETION_SUMMARY.md  __init__.py
backend/database/migrations/: QUICK_REFERENCE.md  README.md  env.py  test_rollback.py  verify_setup.py
backend/src/: __init__.py  main.py  scheduled_jobs.py
backend/src/api/: __init__.py  admin.py  auth.py  dev.py  download.py  health.py  payment.py  pdf.py  quiz.py  recovery.py  verification.py
backend/src/lib/: T010_DATABASE_CONNECTION_GUIDE.md  __init__.py  ai_client.py  database.py  email_utils.py  env.py  monitoring.py  preferences.py  rate_limiting.py  redis_client.py
backend/src/middleware/: __init__.py  admin_auth.py  error_handler.py
backend/src/models/: __init__.py  email_blacklist.py  issue_type.py  magic_link.py  manual_resolution.py  meal_plan.py  payment_status.py  payment_transaction.py  quiz_response.py  refund_count.py  user.py
backend/src/pdf/: generator.py
backend/src/schemas/: __init__.py  admin.py  auth.py  common.py  meal_plan.py  quiz.py  recovery.py
backend/src/services/: __init__.py  auth_service.py  blob_storage.py  (+12 more)
backend/tests/: conftest.py
(+222 files in other folders)
