[project]
name = "backend"
version = "0.1.0"
description = "Keto Meal Plan Generator API - AI-powered personalized keto meal plan generation service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI Core
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",

    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Data Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Environment & Config
    "python-dotenv>=1.0.1",

    # HTTP Client
    "httpx>=0.26.0",

    # Cache & Queue
    "redis>=5.0.1",

    # PDF Generation
    "reportlab>=4.0.9",

    # AI Generation
    "openai>=1.12.0",

    # Authentication
    "bcrypt>=4.1.2",
    "python-jose[cryptography]>=3.3.0",

    # Error Tracking
    "sentry-sdk[fastapi]>=1.40.0",

    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
]
